--- a/noisegen/config.json
+++ b/noisegen/config.json
@@ -3,8 +3,7 @@
     "default_album_folder": "DEMO",
     "default_channel_volume": 40,
     "auto_play": true,
-    
-    "svg_path": "src/svg/",
+    "svg_path": "resources/svg/",
     "svg_btn_pause": "btn_pause.svg",
     "svg_btn_play": "btn_play.svg",
     "svg_btn_stop": "btn_stop.svg",
