--- a/.gitignore
+++ b/.gitignore
@@ -77,8 +77,8 @@ yarn-error.log*
 .ignore/
 .venv/
 .vscode/
-noisegen/audioset/
-!noisegen/audioset/DEMO/*
+noisegen/audioset/*
+!noisegen/audioset/DEMO/
 __pycache__/
 run.bat
 app1.spec
